# hass-nature-remo

./: README.md  pyproject.toml
custom_components/: __init__.py
custom_components/nature_remo/: .old.sensor.py  __init__.py  binary_sensor.py  climate.py  common.py  light.py  manifest.json  sensor.py
custom_components/nature_remo/api/: nature_remo_api.py
remo/: api.py
tests/: __init__.py  conftest.py  test_api.py  test_get_appliances.py  test_imports.py  test_lights.py
